...
                    )
                }
            }

            uiModel.address?.let { address ->
                DiagnosticValueCard(
                    label = "Адрес сервера",
                    value = address,
                )
            }

            uiModel.token?.let { token ->
                DiagnosticValueCard(
...
